[gd_scene load_steps=6 format=3 uid="uid://dd6mx64boab6c"]

[ext_resource type="Script" uid="uid://dgnwnrwcniiok" path="res://source/world/world.gd" id="1_l0bjc"]
[ext_resource type="Script" uid="uid://ck8q8f3ff44vs" path="res://source/world/camera/camera_follower.gd" id="3_5nxb4"]
[ext_resource type="Script" uid="uid://dqoaipd0gi2p4" path="res://source/world/camera/camera.gd" id="3_ibvgw"]
[ext_resource type="PackedScene" uid="uid://cfwgidasxjlmx" path="res://source/world/map/light_map.tscn" id="4_l0bjc"]
[ext_resource type="PackedScene" uid="uid://eui2pkrl4du8" path="res://source/world/map/dark_map.tscn" id="6_cga0s"]

[node name="World" type="Node2D"]
script = ExtResource("1_l0bjc")

[node name="Camera" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_right = 720
limit_bottom = 180
script = ExtResource("3_ibvgw")

[node name="LightViewport" type="SubViewport" parent="."]
handle_input_locally = false
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
size = Vector2i(320, 180)

[node name="CameraFollower" type="Camera2D" parent="LightViewport" node_paths=PackedStringArray("target_camera")]
script = ExtResource("3_5nxb4")
target_camera = NodePath("../../Camera")
metadata/_custom_type_script = "uid://ck8q8f3ff44vs"

[node name="LightMap" parent="LightViewport" instance=ExtResource("4_l0bjc")]

[node name="DarkViewport" type="SubViewport" parent="."]
handle_input_locally = false
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
size = Vector2i(320, 180)

[node name="CameraFollower" type="Camera2D" parent="DarkViewport" node_paths=PackedStringArray("target_camera")]
script = ExtResource("3_5nxb4")
target_camera = NodePath("../../Camera")
metadata/_custom_type_script = "uid://ck8q8f3ff44vs"

[node name="DarkMap" parent="DarkViewport" instance=ExtResource("6_cga0s")]
